Lots of work to get the database data to be seen by the ServiceImplTests
Config
Brother
Excuse
Music
User
are working